# brainforge

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  brain-factory.code-workspace  mkdocs.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  SUPPORT.md  copilot-instructions.md  dependabot.yml  framework-task-queue.json  labeler.yml  markdown-link-check.json  pull_request_template.md
brain-factory/: README.md
brain-factory/adapters/python/: README.md  pyproject.toml
brain-factory/adapters/python/brainfactory/: __init__.py  __main__.py  apply.py  capabilities.py  cli.py  docsmesh.py  emit.py  inspect.py  manifest.py  mcpserver.py  substitute.py  upgrade.py
brain-factory/adapters/python/tests/: test_adapters.py  test_apply.py  test_capabilities.py  test_emit.py  test_manifest.py  test_mcpserver.py  test_operating_standards.py  test_substitute.py  test_upgrade.py
docs/: README.md  adr-template-guide.md  brain-factory-design-overview.md  branching-and-cleanup.md  cli-distribution-and-releases.md  context-synchronization.md  contributor-environment-guide.md  example-issue-to-pr-flow.md  framework-adoption-maturity-model.md  framework-automation-bundles-by-profile.md  framework-brain-factory-architecture.md  framework-change-governance-and-deprecation-policy.md  framework-change-summary-template.md  framework-continuity-and-memory.md  framework-continuity-artifact-indexing.md  framework-continuity-snapshot-template.md  (+40 more)
(+248 files in other folders)
