[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brainfactory"
dynamic = ["version"]
description = "The executable onboarding engine for Brain Factory — provision, adopt, and upgrade project 'brain' repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Izak Laubscher" }]
keywords = ["brain-factory", "onboarding", "agents", "automation", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
]
# Standard library only — no required runtime dependencies.
dependencies = []

[project.optional-dependencies]
# Stricter JSON Schema validation of brain.manifest.json. Without it, manifest
# validation falls back to a built-in structural check (see manifest.py).
schema = ["jsonschema>=4"]

[project.scripts]
brainfactory = "brainfactory.cli:main"

[project.urls]
Homepage = "https://github.com/izakl/brainforge"
Documentation = "https://izakl.github.io/brainforge/"
Source = "https://github.com/izakl/brainforge"

[tool.setuptools]
packages = ["brainfactory"]

[tool.setuptools.dynamic]
version = { attr = "brainfactory.__version__" }
